--- a/Part_II_slide_deck.ipynb
+++ b/Part_II_slide_deck.ipynb
@@ -8,8 +8,8 @@
     }
    },
    "source": [
-    "# Part II - (Presentation Title)\n",
-    "## by (your name here)"
+    "# Part II - Loan Data from Prosper Explanation\n",
+    "## by Agustin Barto"
    ]
   },
   {
@@ -20,10 +20,6 @@
     }
    },
    "source": [
-    ">**Before you start**: You must have the README.md file ready that include a summary of main findings that reflects on the steps taken during the data exploration (Part I notebook). The README.md file should also describes the key insights that will be conveyed by the explanatory slide deck (Part II  outcome)\n",
-    "\n",
-    "\n",
-    "\n",
     "## Investigation Overview\n",
     "\n",
     "\n",
@@ -47,11 +43,10 @@
    },
    "outputs": [],
    "source": [
-    "# import all packages and set plots to be embedded inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
+    "import seaborn as sns\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -214,7 +209,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
